# Dragons-sam-app

./: .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  samconfig.toml  template.yaml
app/events/: event.json
app/lambda_handler/: create_dragon.py  schemas.py
app/tests/: conftest.py  factory_schemas.py  test_handler.py
create_dragon/: config.py  create_dragon.py  schemas.py
create_dragon/app/: config.py  create_dragon.py
delete_dragon/: delete_dragon.py
delete_dragon/app/: config.py  delete_dragon.py
get_dragons/: get_dragons.py  schemas.py
get_dragons/app/: config.py  get_dragons.py
retrieve_dragon/: config.py  exceptions.py  retrieve_dragon.py  schemas.py
retrieve_dragon/app/: config.py  retrieve_dragon.py
shared_layer/: Makefile  config.py  exceptions.py  requirements.txt  service.py
shared_layer/base/: config.py  exceptions.py
stream_handler/: config.py  stream_handler.py
stream_handler/app/: config.py  stream_handler.py
tests/: conftest.py  factory_schemas.py  test_create_dragon.py  test_delete_dragon.py  test_get_dragons.py  test_retrieve_dragon.py  test_stream_handler.py  test_update_dragon.py  utils.py
tests/integration/: test_api_gateway.py
update_dragon/: update_dragon.py
update_dragon/app/: config.py  update_dragon.py
