[tool.poetry]
name = "dragons"
version = "0.1.0"
description = ""
authors = ["Rauan Kassymkhanov <rauan.kassymkhanov@nixs.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
boto3 = "^1.35.13"
aws-lambda-powertools = "^2.43.1"
requests = "^2.32.3"

[tool.poetry.group.dev.dependencies]
ruff = "^0.6.4"
pre-commit = "^3.8.0"
pytest = "^8.3.2"

[tool.ruff]
line-length = 120
lint.select = ["E", "W", "F", "T201"]
lint.extend-select = ["W292"]

[tool.ruff.format]
quote-style = "double"

[tool.pytest.ini_options]
asyncio_mode = "auto"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
